styles.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");

body {
  margin: 0px;
  font-family: "Ubuntu", sans-serif;
}

header,
.hero {
  display: flex;
  background-color: #1f2937;
  padding: 0px 200px;
}

header {
  align-items: center;
  padding-top: 12px;
  gap: 70px;
}

.logo,
.hero-primary,
.hero .button {
  color: #f9faf8;
}

.logo,
.button {
  font-size: 24px;
  font-weight: 500;
}

.header-links,
.hero-secondary {
  color: #e5e7eb;
  font-size: 18px;
}

.header-links {
  display: flex;
  margin: 0px 0px 0px auto;
  gap: 15px;
  list-style-type: none;
  padding: 0px;
}

.hero {
  flex-wrap: wrap;
  padding-top: 100px;
  padding-bottom: 100px;
  justify-content: space-between;
  gap: 20px;
}

.hero-text {
  width: 500px;
}

.photo {
  width: 500px;
  height: auto;
  flex: none;
}

.hero-primary {
  margin: 0px;
  font-size: 48px;
  font-weight: 900;
}

.hero-secondary {
  margin: 10px 0px;
}

.button {
  border: 0px;
  border-radius: 8px;
  font-size: 18px;
  padding: 6px 30px;
  background-color: #3882f6;
}

.cards-title,
.card .text,
.quote,
.author {
  color: #1f2937;
}

.cards-title {
  margin: 45px 0px;
  font-size: 36px;
  font-weight: 900;
  text-align: center;
}

.cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 45px;
  margin-bottom: 80px;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.card img {
  border: 3px solid;
  border-radius: 10px;
  border-color: #3882f6;
  width: 200px;
  height: auto;
}

.card .text {
  padding: 8px;
  font-size: 18px;
  text-align: center;
  font-weight: lighter;
}

.quote,
.author {
  margin: 0px;
  padding-left: 400px;
  padding-right: 400px;
  background-color: #e5e7eb;
}

.quote {
  padding-top: 150px;
  font-size: 36px;
  font-style: italic;
  text-align: left;
  font-weight: lighter;
}

.author {
  text-align: right;
  padding-bottom: 150px;
  font-size: 30px;
  font-weight: 900;
}

.call {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  justify-content: space-between;
  margin: 100px 250px;
  background-color: #3882f6;
  padding: 50px 80px;
  border-radius: 10px;
}

.call h3 {
  margin: 0px;
  font-size: 24px;
  font-weight: 600;
  color: #f9faf8;
}

.call .subtext {
  font-size: 18px;
  color: #e5e7eb;
}

.call .button {
  color: #f9faf8;
  border-color: #f9faf8;
  border: 3px solid;
  background-color: #3882f6;
}

footer {
  color: #e5e7eb;
  background-color: #1f2937;
  font-size: 18px;
  text-align: center;
  font-weight: lighter;
  padding: 30px;
}

